--- a/src/Components/dashboard.css
+++ b/src/Components/dashboard.css
@@ -1,11 +1,11 @@
-form {
+/*form {
     background-color: slategray;
     border-radius: 10px;
     width: 80%;
     max-width: 400px;
     margin: auto;
     padding: 1px;
-}
+}*/
   
 .form-row {
     text-align: left;
