--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,41 @@
+:root {
+  --color-primary: #4B2FEB;
+  --color-secondary: #20EB17;
+  --color-primary-dark: #25109E;
+  --color-secondary-dark: #1D9E18;
+  --color-accent: #EB8B46;
+}
+
 body {
-  background-color: #6441a4;
-  color: #fff;
+  background-color: var(--color-primary);
+  color: white;
   text-align: center;
+}
+
+h2 {
+  font-size: 10pt;
+}
+
+.card {
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px 5px var(--color-primary-dark);
+  width: 80%;
+  max-width: 400px;
+  margin: 25px auto;
+  padding: 1px;
+}
+
+.btn {
+  border-radius: 7px;
+  margin: 2px;
+}
+.btn-primary {
+  background-color: var(--color-secondary-dark);
+  border-color: var(--color-primary-dark);
+}
+.btn-primary:hover, .btn-primary:focus {
+  background-color: var(--color-secondary);
+  border-color: var(--color-secondary-dark);
 }
