--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,8 @@ h2 {
   border-radius: 10px;
   box-shadow: 0px 0px 15px 5px var(--color-primary-dark);
   width: 80%;
-  max-width: 400px;
+  max-width: 1000px;
+  min-width: 450px;
   margin: 25px auto;
   padding: 1px;
 }
