--- a/src/Components/dashboard.css
+++ b/src/Components/dashboard.css
@@ -1,12 +1,6 @@
-/*form {
-    background-color: slategray;
-    border-radius: 10px;
-    width: 80%;
-    max-width: 400px;
-    margin: auto;
-    padding: 1px;
-}*/
-  
+Form {
+    padding-top: 15px;
+}
 .form-row {
     text-align: left;
     margin: 15px 2%;
