--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,15 @@ body {
   text-align: center;
 }
 
+.card-container {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  width: 100vw;
+}
+
 h1 {
   font-size: 28pt;
   padding-top: 20px;
@@ -25,14 +34,38 @@ h2 {
 }
 
 .card {
-  background-color: white;
-  color: black;
   border-radius: 10px;
   box-shadow: 0px 0px 15px 5px var(--color-primary-dark);
-  width: 80%;
-  max-width: 800px;
-  margin: 25px auto;
+  margin: 25px 10px;
   padding: 1px;
+  padding-top: 15px;
+}
+
+.card-app {
+  width: 400px;
+  background-color: white;
+  color: black;
+}
+
+.card-info {
+  background-color: var(--color-secondary-dark);
+  color: white;
+  flex-basis: 400px;
+  flex-shrink: 1;
+  flex-grow: 1;
+  max-width: 600px;
+}
+.card-info ol {
+  padding: 0 10px;
+  list-style-position: inside;
+  text-align: left;
+}
+li {
+  margin: 0;
+  padding: 0;
+}
+.card-info a {
+  color: var(--color-primary-dark);
 }
 
 .btn {
